package DesignPatterns.FactoryDemo.FactoryMethodPatternDemo;

public interface TestObjectMethodFactory {
    TestObject createTestObject();
}
