package DesignPatterns.FactoryDemo.SimpleFactoryDemo;

public class ChildObjectOne implements TestObject{
    @Override
    public void run() {
        System.out.println("ChildObjectOne run");
    }
}
