package DesignPatterns.FactoryDemo.SimpleFactoryDemo;

public class ChildObjectTwo implements TestObject{
    @Override
    public void run() {
        System.out.println("ChildObjectTwo run");
    }
}
